<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Cuidador extends Model
{
    protected $fillable = [
        'nombre',
        'especialidad',
    ];

    public function cuidadorespecies()
    {
        return $this->hasMany('App\Models\CuidadorEspecie');
    }

    public function animalcuidadors()
    {
        return $this->hasMany('App\Models\AnimalCuidador');
    }
}
