<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class CuidadorEspecie extends Model
{
    protected $table='cuidadorespecies';
    protected $fillable = [
        'cuidador_id',
        'especie_id',
    ];

    public function cuidador()
    {
        return $this->belongsTo('App\Models\Cuidador', 'cuidador_id');
    }

    public function especie()
    {
        return $this->belongsTo('App\Models\Especie', 'especie_id');
    }
}
