<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Especie extends Model
{
    protected $fillable = [
        'nombre',
        'descripcion',
    ];

    public function especierecintos()
    {
        return $this->hasMany('App\Models\EspecieRecinto');
    }

    public function animals()
    {
        return $this->hasMany('App\Models\Animal');
    }

    public function cuidadorespecies()
    {
        return $this->hasMany('App\Models\CuidadorEspecie');
    }
}
