<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateEspecierecintos extends Migration{
	public function up(){ 
 		Schema::create('especierecintos', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('especie_id');
			$table->integer('recinto_id');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}